2011-03-12  Janus Weil  <janus@gcc.gnu.org>

PR fortran/48059
	* trans-expr.c (gfc_apply_interface_mapping_to_expr): Replace base type
	for polymorphic arguments.

2011-03-12  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/48059
	* gfortran.dg/class_41.f03: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170906 138bc75d-0d04-0410-961f-82ee72b054a4